tests/ui/pattern/usefulness/top-level-alternation.stderr
error: unreachable pattern
  --> $DIR/top-level-alternation.rs:4:23
   |
LL |     while let 0..=2 | 1 = 0 {} 
   |                       ^ this pattern is unreachable
   |
note: the lint level is defined here
  --> $DIR/top-level-alternation.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:7:20
   |
LL |     if let 0..=2 | 1 = 0 {}
   |                    ^ this pattern is unreachable

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:12:15
   |
LL |             | 0 => {}
   |               ^ this pattern is unreachable

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:19:15
   |
LL |             | Some(0) => {} 
   |               ^^^^^^^ this pattern is unreachable

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:26:9
   |
LL |         (0, 0) => {}
   |         ^^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:48:9
   |
LL |         _ => {}
   |         ^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:54:9
   |
LL |         Some(_) => {}
   |         ^^^^^^^^^^^^^ this arm is never executed
...
LL |         None => {}
   |         ---------- this arm is never executed

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:62:9
   |
LL |         None | Some(_) => {}
   |         ^^^^^^^^^^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:68:9
   |
LL |         1..=2 => {},
   |         ^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/top-level-alternation.rs:73:14
   |
LL |     let (0 | 0) = 0 else { return };
   |              ^ this pattern is unreachable

error: aborting due to 10 previous errors

